<?xml version="1.0" encoding="utf-8"?>
<resources>
  	<!--  les liens -->
    <string name="rechercheAvanceeLabel">recherche avancée</string>

    <!-- les textes -->
    <string name="app_name">My crèche</string>
    <string name="action_settings">Settings</string>
    <string name="coordonneesLabel">Nos coordonnées :</string>
    <string name="telephonelabel">Téléphone : 06 66 66 66 66</string>
    <string name="mailLabel">mail : contact@mycreche.fr</string>
   
    <!-- les hints -->
    <string name="hintVille">Ville</string>
    <string name="hintMessage">Message</string>
    <string name="hintAdresse">Email</string>
    <string name="hintTitre">Titre</string>
    <string name="hintPosition">Ma position</string>
    <string name="hintPseudo">Pseudo</string>
    <string name="hintMotDePasse">Mot de passe</string>
    <string name="hintConfirmation">Confirmation</string>
    
    <!-- Les titres -->
    <string name="nousContacter">Nous contacter</string>
    
    <!-- Les boutons -->    
    <string name="visualiserCreche">Voir carte</string>
    <string name="bouton_contact">Nous contacter</string>
    <string name="bouton_recherche">Rechercher</string>
    <string name="bouton_compte">Mon compte</string>
    <string name="EnvoieMailLabel">Envoyer un mail</string>
    <string name="bouton_envoyer">Envoyer</string>
    <string name="annulerLabel">Annuler</string>
    <string name="bouton_connexion">Connexion</string>
    <string name="bouton_inscription">Inscription</string>
</resources>
