<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fond" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rechercheAvancee" >
    </ListView>

    <EditText
        android:id="@+id/editTextRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/hintPosition" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/rechercheAvancee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextRecherche"
        android:layout_marginLeft="17dp"
        android:text="@string/rechercheAvanceeLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonRechercher"
        style="@style/buttonAction"
        android:layout_alignBaseline="@+id/editTextRecherche"
        android:layout_alignBottom="@+id/editTextRecherche"
        android:layout_alignParentRight="true"
        android:text="@string/bouton_recherche" />

    <ImageView
        android:id="@+id/imageView1"
        style="@style/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

</RelativeLayout>
